<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" 
    android:layout_width="fill_parent" 
    android:layout_height="fill_parent"
    android:background="#243342"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <ScrollView android:layout_width="fill_parent" 
        android:layout_height="fill_parent">
        
        <LinearLayout android:orientation="vertical" 
            android:id="@+id/bass_layout"
            android:padding="20.0dip" 
            android:layout_width="fill_parent" 
            android:layout_height="wrap_content">
            
            <LinearLayout android:orientation="vertical" 
                android:id="@+id/bass_boost" 
                android:layout_width="fill_parent" 
                android:layout_height="wrap_content">
                
                <CheckBox android:id="@+id/bass_boost_enabled" 
                    android:layout_width="wrap_content" 
                    android:layout_height="wrap_content"
                    android:textColor="#f7f7f7"
                    android:text="@string/bass_boost_enabled" />
                
                <TextView android:layout_width="wrap_content" 
                    android:layout_height="wrap_content"
                    android:textColor="#f7f7f7"
                    android:text="@string/bass_boost_description" />
                
                <SeekBar android:id="@+id/bass_boost_val" 
                    android:layout_width="fill_parent" 
                    android:layout_height="wrap_content" 
                    android:max="1000"
                    style="@style/thinSeekBar"
                    android:secondaryProgress="1000" />
                
            </LinearLayout>
            
            <LinearLayout android:orientation="vertical" 
                android:id="@+id/virtualizier" 
                android:paddingTop="20.0dip" 
                android:layout_width="fill_parent" 
                android:layout_height="wrap_content">
                
                <CheckBox android:id="@+id/virtualization_enabled" 
                    android:layout_width="wrap_content" 
                    android:layout_height="wrap_content"
                    android:textColor="#f7f7f7"
                    android:text="@string/virtualization_enabled" />
                
                <TextView android:layout_width="wrap_content" 
                    android:layout_height="wrap_content"
                    android:textColor="#f7f7f7"
                    android:text="@string/virtualization_description" />
                
                <SeekBar android:id="@+id/virtualization_val" 
                    android:layout_width="fill_parent" 
                    android:layout_height="wrap_content" 
                    android:max="1000"
                    style="@style/thinSeekBar"
                    android:secondaryProgress="1000" />
                
            </LinearLayout>

            <!--<LinearLayout android:orientation="vertical"-->
                <!--android:id="@+id/reverb"-->
                <!--android:paddingTop="20.0dip"-->
                <!--android:layout_width="fill_parent"-->
                <!--android:layout_height="wrap_content">-->

                <!--<CheckBox android:id="@+id/reverb_enabled"-->
                    <!--android:layout_width="wrap_content"-->
                    <!--android:layout_height="wrap_content"-->
                    <!--android:textColor="#f7f7f7"-->
                    <!--android:text="@string/virtualization_enabled" />-->

                <!--<TextView android:layout_width="wrap_content"-->
                    <!--android:layout_height="wrap_content"-->
                    <!--android:textColor="#f7f7f7"-->
                    <!--android:text="@string/virtualization_description" />-->

                <!--<Spinner-->
                    <!--android:id="@+id/spinner"-->
                    <!--android:layout_width="match_parent"-->
                    <!--android:layout_height="wrap_content"-->
                    <!--android:layout_marginTop="5dp"-->
                    <!--android:padding="20dp">-->

                <!--</Spinner>-->

            <!--</LinearLayout>-->
            <LinearLayout android:orientation="vertical"
                android:id="@+id/louder"
                android:paddingTop="20.0dip"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content">

                <CheckBox android:id="@+id/loud_enabled"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="#f7f7f7"
                    android:text="@string/loud_enabled" />

                <TextView android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="#f7f7f7"
                    android:text="@string/loud_description" />

                <SeekBar android:id="@+id/loud_val"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:max="1000"
                    android:secondaryProgress="1000" />

            </LinearLayout>
        </LinearLayout>
        
    </ScrollView>
    
</LinearLayout>